# nbdev-upc-aidl-iemocap-datasets

./: .gitignore  AGENTS.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  search.json  sitemap.xml  test_utils.html  test_utils.html.md
nbs/: 00_core.ipynb  01_test_utils.ipynb  index.ipynb  nbdev.yml  sidebar.yml
src/: pyproject.toml
src/nbdev_upc_aidl_iemocap_datasets/: __init__.py  _modidx.py  core.py  test_utils.py
